--- a/exemples/DOM/exchange.html
+++ b/exemples/DOM/exchange.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>Savana | Exchange</title>
-  <link rel="stylesheet" href="/lib/css/animate.min.css">
-  <link rel="stylesheet" href="/lib/css/savana.css">
-  <script src="/lib/js/savana.js"></script> 
+  <link rel="stylesheet" href="../../lib/css/animate.min.css">
+  <link rel="stylesheet" href="../../lib/css/savana.css">
+  <script src="../../lib/js/savana.js"></script> 
 <script>
 
 $savana(document).done(function(e) {
@@ -13,7 +13,7 @@ $savana(document).done(function(e) {
   var start_time = savana.time();
 
   // Troca um element HTML por outro elemento HTML
-  $savana(".n2").exchange("<ul id='list2'><li>1</li><li>2</li></ul>"); 
+  $savana(".n2").exchange("<ul id='list2'><li>New list</li><li>New list2</li></ul>"); 
 
   savana.endTime(start_time);
 
