--- a/exemples/DOM/changeTo.html
+++ b/exemples/DOM/changeTo.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>Savana | ChangeTo</title>
-  <link rel="stylesheet" href="/lib/css/animate.min.css">
-  <link rel="stylesheet" href="/lib/css/savana.css">
-  <script src="/lib/js/savana.js"></script> 
+  <link rel="stylesheet" href="../../lib/css/animate.min.css">
+  <link rel="stylesheet" href="../../lib/css/savana.css">
+  <script src="../../lib/js/savana.js"></script> 
   <script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script>
 <script type="text/javascript">
 
