--- a/exemples/DOM/destroy.html
+++ b/exemples/DOM/destroy.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <title>Savana | Destroy</title>
   <link rel="stylesheet" href="../../lib/css/animate.min.css">
-  <link rel="stylesheet" href="../../lib/css/savana-0.0.1.css">
-  <script src="../../lib/js/savana-0.0.1.js"></script> 
+  <link rel="stylesheet" href="../../lib/css/savana.css">
+  <script src="../../lib/js/savana.js"></script> 
 <script>
 
 $savana(document).done(function(e) {
