--- a/exemples/DOM/removeAttr.html
+++ b/exemples/DOM/removeAttr.html
@@ -3,19 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>Savana | Remove Atrr</title>
-  <link rel="stylesheet" href="/lib/css/animate.min.css">
-  <link rel="stylesheet" href="/lib/css/savana.css">
-  <script src="/lib/js/savana.js"></script> 
+  <link rel="stylesheet" href="../../lib/css/animate.min.css">
+  <link rel="stylesheet" href="../../lib/css/savana.css">
+  <script src="../../lib/js/savana.js"></script> 
 <script>
 
 $savana(document).done(function(e) {
 
-  var start_time = savana.time();
-
   // Remove attribute
   $savana("div.n1").removeAttr("rel");
-
-  savana.endTime(start_time);
 
 });
 
@@ -26,7 +22,7 @@ $savana(document).done(function(e) {
   <div>
 
     <div class="n1" rel="test">
-      
+      hgfhgf
     </div>
 
   </div>
