--- a/exemples/DOM/removeClass.html
+++ b/exemples/DOM/removeClass.html
@@ -3,19 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>Savana | Remove Class</title>
-  <link rel="stylesheet" href="/lib/css/animate.min.css">
-  <link rel="stylesheet" href="/lib/css/savana.css">
-  <script src="/lib/js/savana.js"></script> 
+  <link rel="stylesheet" href="../../lib/css/animate.min.css">
+  <link rel="stylesheet" href="../../lib/css/savana.css">
+  <script src="../../lib/js/savana.js"></script> 
 <script>
 
 $savana(document).done(function(e) {
 
-  var start_time = savana.time();
-
   // Remove class on element
   $savana("ul li").eq(0).removeClass("lista-nova");
-
-  savana.endTime(start_time);
 
 });
 
