test helpers ie8

--- a/exemples/HELPERS/alert.html
+++ b/exemples/HELPERS/alert.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>Savana | Alert</title>
-  <link rel="stylesheet" href="/lib/css/animate.min.css">
-  <link rel="stylesheet" href="/lib/css/savana.css">
-  <script src="/lib/js/savana.js"></script> 
+  <link rel="stylesheet" href="../../lib/css/animate.min.css">
+  <link rel="stylesheet" href="../../lib/css/savana.css">
+  <script src="../../lib/js/savana.js"></script> 
+  <script src="../../lib/js/addEventListener-IE.js"></script> 
 <script>
 
 $savana(document).done(function(e) {
