--- a/exemples/HELPERS/getValueBill.html
+++ b/exemples/HELPERS/getValueBill.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Savana | Get Value Bill</title>
-  <link rel="stylesheet" href="/lib/css/animate.min.css">
-  <link rel="stylesheet" href="/lib/css/savana.css">
-  <script src="/lib/js/savana.js"></script> 
+  <link rel="stylesheet" href="../../lib/css/animate.min.css">
+  <link rel="stylesheet" href="../../lib/css/savana.css">
+  <script src="../../lib/js/savana.js"></script> 
 <script>
 
 $savana(document).done(function(e) {
 
-  console.log(savana.getValueBill("R$ 252.55", 10, "R$"));
+  console.log(savana.getValueBill("R$ 252.55", 10, "R$")['total']);
 
 });
 
