--- a/exemples/HELPERS/installment.html
+++ b/exemples/HELPERS/installment.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Savana | Installment</title>
-  <link rel="stylesheet" href="/lib/css/animate.min.css">
-  <link rel="stylesheet" href="/lib/css/savana.css">
-  <script src="/lib/js/savana.js"></script> 
+  <link rel="stylesheet" href="../../lib/css/animate.min.css">
+  <link rel="stylesheet" href="../../lib/css/savana.css">
+  <script src="../../lib/js/savana.js"></script> 
 <script>
 
 $savana(document).done(function(e) {
 
-  console.log(savana.installment("R$ 377,55", 10, 0, 50, "R$"));
+  console.log(savana.installment("R$ 377,55", 10, 0, 50, "R$")['parc']);
 
 });
 
