--- a/exemples/HELPERS/modal.html
+++ b/exemples/HELPERS/modal.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../../lib/css/animate.min.css">
   <link rel="stylesheet" href="../../lib/css/savana.css">
   <script src="../../lib/js/savana.js"></script> 
+  <script src="../../lib/js/addEventListener-IE.js"></script> 
 <script>
 
 $savana(document).done(function(e) {
