--- a/exemples/HELPERS/percent.html
+++ b/exemples/HELPERS/percent.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Savana | Percent</title>
-  <link rel="stylesheet" href="/lib/css/animate.min.css">
-  <link rel="stylesheet" href="/lib/css/savana.css">
-  <script src="/lib/js/savana.js"></script> 
+  <link rel="stylesheet" href="../../lib/css/animate.min.css">
+  <link rel="stylesheet" href="../../lib/css/savana.css">
+  <script src="../../lib/js/savana.js"></script> 
 <script>
 
 $savana(document).done(function(e) {
 
-  console.log(savana.percent("R$ 100,00","R$ 50,00", "R$"));
+  console.log(savana.percent("R$ 100,00","R$ 50,00", "R$")['discount']);
 
 });
 
