--- a/exemples/DOM/each.html
+++ b/exemples/DOM/each.html
@@ -14,7 +14,7 @@ $savana(document).done(function(e) {
 
   // Literar elements
   $savana("ul").find("li").each(function(e){
-    console.log($savana(_this).content("text")); 
+    console.log($savana(self).content("text")); 
   })
 
   savana.endTime(start_time);
