--- a/exemples/HELPERS/getValueBill.html
+++ b/exemples/HELPERS/getValueBill.html
@@ -10,7 +10,7 @@
 
 $savana(document).done(function(e) {
 
-  console.log(savana.getValueBill("R$ 252.55", 10, "R$")['total']);
+  console.log(savana.getValueBill("R$ 250,00", 10, "R$"));
 
 });
 
