--- a/exemples/DOM/animate.html
+++ b/exemples/DOM/animate.html
@@ -10,8 +10,6 @@
 
 $savana(document).done(function(e) {
 
-  var start_time = savana.time();
-
   // Insert animation css in element
   // Plugin CSS by Daniel Eden - https://daneden.github.io/animate.css/
 
@@ -32,14 +30,12 @@ $savana(document).done(function(e) {
 
   $savana(".n1").animate("fadeIn");  
 
-  savana.endTime(start_time);
-
 });
 
 </script>
 </head>
 <body>
-
+<p>To better see this method open the source code and the browser console</p>
   <div>
 
     <div class="n1" rel="test">
