--- a/exemples/DOM/destroy.html
+++ b/exemples/DOM/destroy.html
@@ -10,19 +10,15 @@
 
 $savana(document).done(function(e) {
 
-  var start_time = savana.time();
-
   // Remove elements of HTML
   $savana("ul").find("li").eq(0).destroy();
-
-  savana.endTime(start_time);
 
 });
 
 </script>
 </head>
 <body>
-
+<p>To better see this method open the source code and the browser console</p>
 <ul>
     <li>1</li>
     <li>2</li>
