--- a/exemples/DOM/document-done.html
+++ b/exemples/DOM/document-done.html
@@ -16,5 +16,7 @@ $savana(document).done(function(e) {
 
 </script>
 </head>
+<body>
+	<p>To better see this method open the source code and the browser console</p>
 </body>
 </html>
