--- a/exemples/DOM/exchange.html
+++ b/exemples/DOM/exchange.html
@@ -10,19 +10,15 @@
 
 $savana(document).done(function(e) {
 
-  var start_time = savana.time();
-
   // Troca um element HTML por outro elemento HTML
   $savana(".n2").exchange("<ul id='list2'><li>New list</li><li>New list2</li></ul>"); 
-
-  savana.endTime(start_time);
 
 });
 
 </script>
 </head>
 <body>
-
+<p>To better see this method open the source code and the browser console</p>
     <div class="n1" rel="test">
       test1
       <div class="n2">
