--- a/exemples/DOM/first.html
+++ b/exemples/DOM/first.html
@@ -10,12 +10,8 @@
 
 $savana(document).done(function(e) {
 
-  var start_time = savana.time();
-
   // Buscar elementos na primeira posição
   $savana("div.n1").child("div").first().styles("border:1px solid red");
-
-  savana.endTime(start_time);
 
 });
 
@@ -41,7 +37,7 @@ $savana(document).done(function(e) {
 
 </head>
 <body>
-
+<p>To better see this method open the source code and the browser console</p>
   <div class="n1 p1">
 
     <div  id="a1" class="n2 p2">
