--- a/exemples/DOM/position.html
+++ b/exemples/DOM/position.html
@@ -20,7 +20,7 @@ $savana(document).done(function(e) {
 </script>
 </head>
 <body>
-
+<p>To better see this method open the source code and the browser console</p>
 <br><br><br>
 <div class="n1">22</div>
 
