--- a/exemples/DOM/removeClass.html
+++ b/exemples/DOM/removeClass.html
@@ -18,7 +18,7 @@ $savana(document).done(function(e) {
 </script>
 </head>
 <body>
-
+<p>To better see this method open the source code and the browser console</p>
 <ul>
     <li class="lista-nova">1</li>
     <li>2</li>
