--- a/exemples/DOM/size.html
+++ b/exemples/DOM/size.html
@@ -10,21 +10,17 @@
 
 $savana(document).done(function(e) {
 
-  var start_time = savana.time();
-
   // Retorna o tamanho de largura e altura de um elemento
   var size = $savana(".n1").size();
   console.log(size.w);
   console.log(size.h);
-
-  savana.endTime(start_time);
 
 });
 
 </script>
 </head>
 <body>
-
+<p>To better see this method open the source code and the browser console</p>
   <div class="n1">22</div>
 
 </body>
