--- a/exemples/DOM/styles.html
+++ b/exemples/DOM/styles.html
@@ -10,19 +10,15 @@
 
 $savana(document).done(function(e) {
 
-  var start_time = savana.time();
-
   // Insert styles on element
   $savana(".n1").styles("color:red");
-
-  savana.endTime(start_time);
 
 });
 
 </script>
 </head>
 <body>
-
+<p>To better see this method open the source code and the browser console</p>
   <div>
 
     <div class="n1" rel="test">
