--- a/exemples/DOM/addClass.html
+++ b/exemples/DOM/addClass.html
@@ -19,6 +19,7 @@ $savana(document).done(function(e) {
 </script>
 </head>
 <body>
+<p>To better see this method open the source code and the browser console</p>
 
 <ul>
     <li>1</li>
