--- a/exemples/DOM/changeTo.html
+++ b/exemples/DOM/changeTo.html
@@ -6,24 +6,19 @@
   <link rel="stylesheet" href="../../lib/css/animate.min.css">
   <link rel="stylesheet" href="../../lib/css/savana.css">
   <script src="../../lib/js/savana.js"></script> 
-  <script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script>
 <script type="text/javascript">
 
 $savana(document).done(function(e) {
 
-  var start_time = savana.time();
-
   // Copy a element
   $savana(".n2").changeTo(".n1","before"); 
-
-  savana.endTime(start_time);
 
 });
 
 </script>
 </head>
 <body>
-
+<p>To better see this method open the source code and the browser console</p>
     <div class="n1" rel="test">
       test1
       <div class="n2">
