--- a/exemples/DOM/copy.html
+++ b/exemples/DOM/copy.html
@@ -10,19 +10,15 @@
 
 $savana(document).done(function(e) {
 
-  var start_time = savana.time();
-
   // Copy a element
   console.log($savana(".n2").copy()); 
-
-  savana.endTime(start_time);
-
+  
 });
 
 </script>
 </head>
 <body>
-
+<p>To better see this method open the source code and the browser console</p>
     <div class="n1" rel="test">
       test1
       <div class="n2">
