--- a/exemples/DOM/hide.html
+++ b/exemples/DOM/hide.html
@@ -10,19 +10,16 @@
 
 $savana(document).done(function(e) {
 
-  var start_time = savana.time();
-
   // Esconder elementos
   $savana(".n1").hide();
 
-  savana.endTime(start_time);
 
 });
 
 </script>
 </head>
 <body>
-
+<p>To better see this method open the source code and the browser console</p>
     <div class="n1" rel="test">
       test1
       <div class="n2">
