--- a/exemples/DOM/isEmpty.html
+++ b/exemples/DOM/isEmpty.html
@@ -10,8 +10,6 @@
 
 $savana(document).done(function(e) {
 
-  var start_time = savana.time();
-
   // Verificar se um input radio ou checkbox esta clicado
   if($savana(".n1").isEmpty("text")){
       alert(true) // Vazio
@@ -19,14 +17,12 @@ $savana(document).done(function(e) {
       alert(false) // Com conteudo
   }
 
-  savana.endTime(start_time);
-
 });
 
 </script>
 </head>
 <body>
-
+<p>To better see this method open the source code and the browser console</p>
   <div class="n1">22</div>
 
 </body>
