--- a/exemples/DOM/onload.html
+++ b/exemples/DOM/onload.html
@@ -16,5 +16,7 @@ $savana(window).onload(function(e){
 
 </script>
 </head>
+<body>
+	<p>To better see this method open the source code and the browser console</p>
 </body>
 </html>
