--- a/exemples/DOM/parents.html
+++ b/exemples/DOM/parents.html
@@ -10,19 +10,15 @@
 
 $savana(document).done(function(e) {
 
-  var start_time = savana.time();
-
   // Get a parent of element
   $savana(".n1").parents("body").styles("border: 1px solid red;");
-
-  savana.endTime(start_time);
 
 });
 
 </script>
 </head>
 <body>
-
+<p>To better see this method open the source code and the browser console</p>
     <div class="n1" rel="test">
       test1
       <div class="n2">
