--- a/exemples/DOM/removeAttr.html
+++ b/exemples/DOM/removeAttr.html
@@ -18,7 +18,7 @@ $savana(document).done(function(e) {
 </script>
 </head>
 <body>
-
+<p>To better see this method open the source code and the browser console</p>
   <div>
 
     <div class="n1" rel="test">
