--- a/exemples/DOM/isSelected.html
+++ b/exemples/DOM/isSelected.html
@@ -41,7 +41,7 @@ $savana(document).done(function(e) {
    <td align="left">
     <select id="nome" name="nome">
       <option value="">Choose</option>
-      <option value="John" >John</option>
+      <option value="John" selected="selected">John</option>
     </select>
    </td>
   </tr>
