--- a/exemples/HELPERS/modal.html
+++ b/exemples/HELPERS/modal.html
@@ -21,7 +21,7 @@ $savana(document).done(function(e) {
 </script>
 </head>
 <body style="background: #ccc">
-
+<p>To better see this method open the source code and the browser console</p>
 	<div class="sjs-modal-hide modal-test">
 		<div class="sjs-modal-content">
 			Content test 1
