--- a/exemples/HELPERS/isURL.html
+++ b/exemples/HELPERS/isURL.html
@@ -17,6 +17,6 @@ $savana(document).done(function(e) {
 </script>
 </head>
 <body>
-
+<p>To better see this method open the source code and the browser console</p>
 </body>
 </html>
