--- a/exemples/HELPERS/preloader.html
+++ b/exemples/HELPERS/preloader.html
@@ -26,6 +26,6 @@ $savana(document).done(function(e) {
 </script>
 </head>
 <body>
-
+<p>To better see this method open the source code and the browser console</p>
 </body>
 </html>
