--- a/exemples/DOM/scroll.html
+++ b/exemples/DOM/scroll.html
@@ -2,16 +2,16 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Savana | Window Load</title>
+  <title>Savana | Scroll</title>
   <link rel="stylesheet" href="../../lib/css/animate.min.css">
   <link rel="stylesheet" href="../../lib/css/savana.css">
   <script src="../../lib/js/savana.js"></script> 
   <script>
 
-  $savana(window).onload(function(e){
+  $savana(window).scroll(function(e){
 
 	  // Yout code here
-    alert("On load")
+    console.log("scrolling");
 
   });
 
