--- a/exemples/CLIENT-SIDE/single-page/index.html
+++ b/exemples/CLIENT-SIDE/single-page/index.html
@@ -8,6 +8,11 @@
   <title>Users</title>
   <meta name="description" content="">
   <meta name="author" content="">
+  <!--[if lt IE 9]>
+        <script src="/lib/js/addEventListener-IE.min.js"></script>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      <![endif]-->
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
