--- a/exemples/DOM/position.html
+++ b/exemples/DOM/position.html
@@ -12,8 +12,8 @@ $savana(document).done(function(e) {
 
   // Retorna o X e Y de um elemento
   var pos = $savana(".n1").position();
-  pos.x;
-  pos.y;
+  alert("X:" + pos.x);
+  alert("Y:" + pos.y);
 
 });
 
@@ -22,7 +22,7 @@ $savana(document).done(function(e) {
 <body>
 <p>To better see this method open the source code and the browser console</p>
 <br><br><br>
-<div class="n1">22</div>
+<div class="n1"></div>
 
 </body>
 </html>
