--- a/exemples/DOM/scroll.html
+++ b/exemples/DOM/scroll.html
@@ -19,5 +19,8 @@
 </head>
 <body>
 	<p>To better see this method open the source code and the browser console</p>
+  <div style="height: 1000px">
+    
+  </div>
 </body>
 </html>
