--- a/exemples/DOM/delegate.html
+++ b/exemples/DOM/delegate.html
@@ -15,7 +15,7 @@ $savana(document).done(function(e) {
   // Events (click, hover, change, keyup, etc)
   $savana("body").delegate("click", "a", function(e){
     alert($savana(this).content("text")); // Reference to $savana("a")
-    savana.eventStop();
+    savana.eventStop(e);
   });
 });
 
