--- a/exemples/HELPERS/date.html
+++ b/exemples/HELPERS/date.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Savana | Is Email</title>
+  <title>Savana | Date</title>
   <link rel="stylesheet" href="../../lib/css/animate.min.css">
   <link rel="stylesheet" href="../../lib/css/savana.css">
   <script src="../../lib/js/savana.js"></script> 
@@ -10,7 +10,9 @@
 
 $savana(document).done(function(e) {
 
-  alert(savana.isEmail("rafael.cruz@hghcorebiz.com.br"));
+  // Enable and disable console
+  var date = savana.date();
+  console.log(date)
 
 });
 
