resolve bug money

--- a/exemples/HELPERS/formatMoney.html
+++ b/exemples/HELPERS/formatMoney.html
@@ -10,7 +10,7 @@
 
 $savana(document).done(function(e) {
 
-  alert(savana.formatMoney("2000.91", 2, ",", ".", "R$")); // R$ 2.000,91);
+  alert(savana.formatMoney("2000.91", 2, ",", ".", "$")); // R$ 2.000,91);
 
 });
 
