--- a/exemples/HELPERS/installment.html
+++ b/exemples/HELPERS/installment.html
@@ -10,7 +10,7 @@
 
 $savana(document).done(function(e) {
 
-  console.log(savana.installment("R$ 377,55", 10, 0, 50, "R$")['parc']);
+  console.log(savana.installment("R$ 377,55", 10, 0, 50, "R$"));
 
 });
 
