--- a/exemples/HELPERS/isEmail.html
+++ b/exemples/HELPERS/isEmail.html
@@ -10,7 +10,7 @@
 
 $savana(document).done(function(e) {
 
-  alert(savana.isEmail("rafael.cruz@hghcorebiz.com.br"));
+  alert(savana.isEmail("rafael.cruz@corebiz.com.br"));
 
 });
 
