feat: funcs to and is

--- a/example/index-build.html
+++ b/example/index-build.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <h1>Hello!</h1>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js" integrity="sha256-wS9gmOZBqsqWxgIVgA8Y9WcQOa7PgSIX+rPA0VL2rbQ=" crossorigin="anonymous"></script>
-    <script src="bundle.js"></script>
+    <script src="../dist/savanajs.min.js"></script>
 </body>
 </html>
